Add commands and handlers using PipelinR

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.sizovs</groupId>
+            <artifactId>pipelinr</artifactId>
+            <version>0.7</version>
+        </dependency>
     </dependencies>
 
     <build>
